--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "Log in") %>
-<h1>Log in</h1>
+<h1>Log in (NetID)</h1>
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
-    <%= form_for(:static_pages, url: login_path) do |f| %>
+    <%= form_for(:static_pages, url: login_netid_path) do |f| %>
 
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
