--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -10,7 +10,7 @@
       <%= f.text_field :name, class: 'form-control' %>
 
       <div class="col-md-6 col-md-offset-3">
-        <%= f.submit "Create team", class: "btn btn-primary" %>
+        <%= f.submit "Create Team", class: "btn btn-primary" %>
       </div>
     <% end %>
   </div>
