--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :UIN %>
+      <%= f.text_field :uin, class: 'form-control' %>
+
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
 
