Updated GitHub link in footer, about. Added Cucumber tests

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,11 @@
 <h1>About</h1>
 <p>
   This app is designed for the allotment of projects to the students who will register for CSCE 606 or CSCE 431. <br>
-  The github repository to this project is <a href="https://github.com/Rubythons/Project-Collection-and-Assignment"> here.</a>	
+  <br>
+  This project has been managed by several teams. <br>  
+  Development up until December 2016 can be found at the GitHub repository <a href="https://github.com/Rubythons/Project-Collection-and-Assignment"> here</a>. <br>
+  Development between January 2017 and May 2017 can be found at the GitHub repository <a href="https://github.com/SourabhShenoy/Project-Collection-and-Assignment-master"> here</a>. <br>	
+  Development between January 2018 and May 2018 can be found at the GitHub repository <a href="https://github.com/Whomps/Project_Collection_and_Assignment"> here</a>. <br>
+  <br>
+  The latest Agile project management history can be found on the Pivotal Tracker public project <a href="https://www.pivotaltracker.com/n/projects/2154839"> here</a>. <br>
 </p>
