Fixed Log In typo, added tests, added paths

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -88,7 +88,7 @@
                     </li>
                 <% else %>
                     <li><%= link_to "Sign Up", signup_path %></li>
-                    <li><%= link_to "Log in", login_path %></li>
+                    <li><%= link_to "Log In", login_path %></li>
                 <% end %>
             </ul>
         </nav>
