--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,8 +7,8 @@
   <h2>Welcome to the </h2>
   <h3>Project Submission and Assignment System</h3>
   <div class="row">
-    <%= link_to "Log In with NetID", login_netid_path, class: "btn btn-lg btn-primary" %>
-	<%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to 'Log In (NetID)', login_netid_path, class: "btn btn-lg btn-primary" %>
+	<%= link_to 'Log In (Local)', login_path, class: "btn btn-lg btn-primary" %> 
   </div>
 
   <% end %>
