--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -17,7 +17,7 @@
       <% end %>
       
       <div class="col-md-6 col-md-offset-3">
-        <%= f.submit "Log in", class: "btn btn-primary" %>
+        <%= f.submit "Log In", class: "btn btn-primary" %>
       </div>
     
     <% end %>
