--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -53,6 +53,15 @@ $(".toggle_legacy").change(function()
             
             <%= f.label :description %><br>
             <%= f.text_area :description, class: "form_control", rows: 8 %>
+            
+            <%= f.label :github_link %><br>
+            <%= f.text_area :github_link, class: "form_control", rows: 1 %>
+            
+            <%= f.label :pivotal_link %><br>
+            <%= f.text_area :pivotal_link, class: "form_control", rows: 1 %>
+            
+            <%= f.label :heroku_link %><br>
+            <%= f.text_area :heroku_link, class: "form_control", rows: 1 %>
 
             <%= f.label :oncampus , "*Is On-Campus ?" %><br/>
             <%= f.check_box :oncampus, class: "form_control" %>
