--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,6 +8,11 @@
 </h2>
 <% end %>
 
+<% if @assigned_user %>
+<h2><%= link_to "Edit", edit_project_path(@project) %></h2>
+<% end %>
+
+
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
 <table class="table">
