--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -12,6 +12,7 @@
 <td>Team Leader</td>
 
 <td><%=link_to "Project Assigned",teams_path(:sort => "assigned")%></td>
+<td><%="Project Preferences Filled?"%></td>
 <td>Options</td>
 
 
