--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -7,7 +7,8 @@
  
  
   <td><%=@status[team.id]%></td>
-	<td class="options"><%= link_to "Edit", edit_team_path(team) %>| <%= link_to "Delete", team, method: :delete,
+  <td><%=raw(@preferences[team.id])%></td>
+  <td class="options"><%= link_to "Edit", edit_team_path(team) %>| <%= link_to "Delete", team, method: :delete,
                                   data: { confirm: "You sure?" } %></td>
   <% end %>
 </tr>
